<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_scroll_view"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:scrollbars="none"
    android:background="@color/colorDarkBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="bottom"
            android:orientation="vertical">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:src="@drawable/ic_otp_img"
                android:background="@color/colorTransparent"
                android:contentDescription="@string/app_name"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/verification"
                android:textSize="32sp"
                android:layout_margin="10dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/activity_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorTextSecondary"
                android:text="@string/otp_info"
                android:textSize="18sp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:layout_margin="20dp"
                android:textStyle="normal"
                android:minLines="2"
                android:maxLines="2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:padding="20dp"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>

                <EditText
                    android:id="@+id/otp_number_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/no_val"
                    android:autofillHints="no"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:padding="10dp"
                    android:background="@drawable/bottom_stroke_btn"
                    android:layout_margin="10dp"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/otp_number_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/no_val"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:autofillHints="no"
                    android:textAlignment="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:padding="10dp"
                    android:background="@drawable/bottom_stroke_btn"
                    android:layout_margin="10dp"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/otp_number_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/no_val"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:autofillHints="no"
                    android:textAlignment="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:padding="10dp"
                    android:background="@drawable/bottom_stroke_btn"
                    android:layout_margin="10dp"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/otp_number_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/no_val"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:autofillHints="no"
                    android:padding="10dp"
                    android:background="@drawable/bottom_stroke_btn"
                    android:layout_margin="10dp"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/otp_number_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/no_val"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:autofillHints="no"
                    android:padding="10dp"
                    android:background="@drawable/bottom_stroke_btn"
                    android:layout_margin="10dp"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/otp_number_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/no_val"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:autofillHints="no"
                    android:textAlignment="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:padding="10dp"
                    android:background="@drawable/bottom_stroke_btn"
                    android:layout_margin="10dp"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>

            </LinearLayout>

            <Button
                android:id="@+id/verify_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verify"
                android:textColor="@color/colorTextPrimary"
                android:textStyle="normal"
                android:textSize="18sp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:padding="15dp"
                android:background="@drawable/rounded_btn_20"
                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>